# hackVMtranslate

./: README.md  hackVMtranslate.cabal
app/: Main.hs
examples/MemoryAccess/BasicTest/: BasicTest.asm
examples/MemoryAccess/PointerTest/: PointerTest.asm
examples/MemoryAccess/StaticTest/: StaticTest.asm
examples/StackArithmetic/StackTest/: StackTest.asm
src/: CodeGen.hs  Lexer.hs  Parser.hs  Syntax.hs
