name:                hackVMtranslate
version:             0.1.0.0
synopsis:            Translate hack vm to hack asm
description:         From the course: Nand to Tetris part II.
homepage:            https://github.com/jeffreyrosenbluth/hackVMtranslate#readme
license:             BSD3
license-file:        LICENSE
author:              Jeffrey Rosenbluth
maintainer:          example@example.com
copyright:           2017 Jeffrey Rosenbluth
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Syntax
                     , Lexer
                     , Parser
                     , CodeGen
  build-depends:       base >= 4.7 && < 5
                     , megaparsec >= 5.0 && < 5.3
                     , text >= 1.2 && < 1.3
                     , text-show >= 3.4 && < 3.7
                     , mtl >= 2.2 && < 2.3
  default-language:    Haskell2010

executable translate
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hackVMtranslate
                     , megaparsec >= 5.0 && < 5.3
                     , text >= 1.2 && < 1.3
                     , directory >= 1.3 && < 1.4
                     , mtl >= 2.2 && < 2.3
  default-language:    Haskell2010

test-suite hackVMtranslate-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hackVMtranslate
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jeffreyrosenbluth/hackVMtranslate
